# cg-exam

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
cmake/modules/: FindSDL2.cmake
docs/: 404.html  engine-core.html  game.html  graphics.html  index.html  utils.html
docs-dev/: README.md  engine-core.md  game.md  graphics.md  utils.md
docs-dev/.vuepress/: config.js
docs-dev/.vuepress/styles/: palette.styl
docs/assets/css/: 0.styles.585889b8.css
docs/assets/js/: 3.676b69f1.js  4.a5e8faa5.js  4.cea1dc6d.js  6.4c5be0ae.js  7.451bf10a.js  7.8185734a.js  8.06b78789.js  8.9dfec95c.js  9.5582e851.js  9.97f7254b.js  app.b4e604e7.js  app.f0baf905.js
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GlobalStateManager.hpp  InputDefinitions.hpp  InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp
src/game/: Box.cpp  Box.hpp  CMakeLists.txt  Car.cpp  Car.hpp  Menu.hpp  Minimap.cpp  Minimap.hpp  StaticObject.cpp  StaticObject.hpp
src/graphics/: CMakeLists.txt  CubeMap.cpp  CubeMap.hpp  Font.cpp  Font.hpp  GLSLShader.cpp  GLSLShader.hpp  GUIComponent.cpp  GUIComponent.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp
src/math/: CMakeLists.txt  Math.hpp
src/shaders/: BasicShader.cpp  BasicShader.hpp  CMakeLists.txt  GUIShader.cpp  GUIShader.hpp  MaterialShader.cpp  MaterialShader.hpp  TerrainShader.cpp  TerrainShader.hpp
src/utils/: CMakeLists.txt  GCGraLib2.cpp  ObjFileLoader.cpp  ObjFileLoader.hpp
